# nonebot-plugin-bilichat-mygo

./: bot.py  pyproject.toml  v11_selfmsg_hook.py
nonebot_plugin_bilichat/: __init__.py  base_content_parsing.py  config.py
nonebot_plugin_bilichat/api/: base.py  subs_config.py
nonebot_plugin_bilichat/commands/: login.py  modify_cfg.py  subs.py
nonebot_plugin_bilichat/content/: __init__.py  dynamic.py
nonebot_plugin_bilichat/lib/: bcut_asr.py  fonts_provider.py  video_subtitle.py
nonebot_plugin_bilichat/lib/bilibili_request/: gRPC.py
nonebot_plugin_bilichat/lib/cache/: mongo_cache.py
nonebot_plugin_bilichat/lib/draw/dynamic/: __init__.py  dynamicrender.py
nonebot_plugin_bilichat/lib/draw/video/: __init__.py  bbot_default.py
nonebot_plugin_bilichat/model/: bcut_asr.py  exception.py
nonebot_plugin_bilichat/model/api/: bilibili_auth.py
nonebot_plugin_bilichat/subscribe/: dynamic.py  live.py  manager.py
nonebot_plugin_bilichat/summary/: openai.py
